--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="//fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"  rel="stylesheet">
     <title>Haus</title>
 </head>
 <body>
     <div class="wrapper">
-        
+        <header class="header">
+            <nav class="header_nav">
+                    <ul class="nav_list">
+                        <li class="nav_item"><a href="" class="nav_link">shop</a></li>
+                        <li class="nav_item"><a href="" class="nav_link">membership</a></li>
+                        <li class="nav_item"><a href="" class="nav_link">our story</a></li>
+                    </ul>
+            </nav>
+
+            <div class="header_logo">
+                <img src="./images/Vector.svg" alt="logo" class="logo_image">
+            </div>
+
+            <div class="header_block">
+                <ul class="nav_list">
+                    <li class="nav_item"><a href="" class="nav_link">Newsletter</a></li>
+                    <li class="nav_item"><a href="" class="nav_link">Account</a></li>
+                    <li class="nav_item"><a href="" class="nav_link">Cart ( 0)</a></li>
+                </ul>
+            </div>
+        </header>
     </div>
 </body>
 </html>
