added more section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
+
             <nav class="header_nav">
                     <ul class="nav_list">
                         <li class="nav_item"><a href="" class="nav_link">shop</a></li>
@@ -31,6 +32,32 @@
                 </ul>
             </div>
         </header>
+
+        <section class="drinks">
+            <div class="drinks_left"></div>
+            <div class="drinks_right">
+                <h1 class="drinks_title">Alcohol for the modern drinker</h1>
+                <p class="drinks_text">Light and refreshing flavors made with real, clean ingredients you can feel good about. Just pour, sip, and enjoy.</p>
+                <button class="drinks_btn">Shop ALL</button>
+            </div>
+        </section>
+
+        <section class="brands">
+            <ul class="brands_list">
+                <li class="brands_item">
+                    <p class="brands_text">"What makes Haus so special is its incredible flavors."</p>
+                    <img src="./images/food_wine.jpg" alt="photo" class="brands_image">
+                </li>
+                <li class="brands_item">
+                    <p class="brands_text">“For the wine or cocktail lover who’s tried it all and wants something new and refreshing.”</p>
+                    <img src="./images/new_york_time.jpg" alt="photo" class="brands_image">
+                </li>
+                <li class="brands_item">
+                    <p class="brands_text">“Cleaner, responsibly sourced, and lower in alcohol.”</p>
+                    <img src="./images/bon_appertit.jpg" alt="photo" class="brands_image">
+                </li>
+            </ul>
+        </section>
     </div>
 </body>
 </html>
