added some changes

--- a/index.html
+++ b/index.html
@@ -58,6 +58,33 @@
                 </li>
             </ul>
         </section>
+
+        <section class="natural">
+            <h1 class="natural_title">Made with natural ingredients, nothing fake</h1>
+            <p class="natural_text">Shop All Flavors</p>
+            <div class="natural_block">
+                <ul class="natural_list">
+                    <li class="natural_item">
+                        <img src="./" alt="" class="natural_image">
+                        <h3 class="natural_sub_title"></h3>
+                        <p class="natural_sub_text"></p>
+                        <button class="natural_btn"></button>
+                    </li>
+                    <li class="natural_item">
+                        <img src="" alt="" class="natural_image">
+                        <h3 class="natural_sub_title"></h3>
+                        <p class="natural_sub_text"></p>
+                        <button class="natural_btn"></button>
+                    </li>
+                    <li class="natural_item">
+                        <img src="" alt="" class="natural_image">
+                        <h3 class="natural_sub_title"></h3>
+                        <p class="natural_sub_text"></p>
+                        <button class="natural_btn"></button>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
 </body>
 </html>
