added one more section

--- a/index.html
+++ b/index.html
@@ -65,26 +65,39 @@
             <div class="natural_block">
                 <ul class="natural_list">
                     <li class="natural_item">
-                        <img src="./" alt="" class="natural_image">
-                        <h3 class="natural_sub_title"></h3>
-                        <p class="natural_sub_text"></p>
-                        <button class="natural_btn"></button>
+                        <img src="./images/natural1.jpg" alt="photo" class="natural_image">
+                        <h3 class="natural_sub_title">The Sampler Kit</h3>
+                        <p class="natural_sub_text">Try a variety of Haus flavors with our customizable four-bottle kit. Each bottle serves 2-3 drinks.</p>
+                        <button class="natural_btn">Shop Now</button>
                     </li>
                     <li class="natural_item">
-                        <img src="" alt="" class="natural_image">
-                        <h3 class="natural_sub_title"></h3>
-                        <p class="natural_sub_text"></p>
-                        <button class="natural_btn"></button>
+                        <img src="./images/natural2.jpg" alt="photo" class="natural_image">
+                        <h3 class="natural_sub_title">Grapefruit Jalapeño</h3>
+                        <p class="natural_sub_text">Light and refreshing, this aperitif is a bright blend of citrus with a subtle kick of fresh jalapeño.</p>
+                        <button class="natural_btn">Shop Now</button>
                     </li>
                     <li class="natural_item">
-                        <img src="" alt="" class="natural_image">
-                        <h3 class="natural_sub_title"></h3>
-                        <p class="natural_sub_text"></p>
-                        <button class="natural_btn"></button>
+                        <img src="./images/natural3.jpg" alt="photo" class="natural_image">
+                        <h3 class="natural_sub_title">Citrus Flower</h3>
+                        <p class="natural_sub_text">A fresh Californian take on the apéritif. Made with crisp lemon and subtle elderflower.</p>
+                        <button class="natural_btn">Shop Now</button>
                     </li>
                 </ul>
             </div>
         </section>
+
+        <section class="lemonade">
+            <div class="lemonade_block">
+                <img src="./images/lemonade.jpg" alt="photo" class="lemonade_image">
+            </div>
+
+            <div class="lemonade_text_block">
+                <h1 class="lemonade_title">An intro to apéritifs</h1>
+                <p class="lemonade_text">Apéritifs are a category of spirits with complex flavors derived from fruits, herbs, and botanicals. Their lighter alcohol content (less than whiskey, more than wine) makes them perfect to sip all evening.</p>
+            </div>
+        </section>
+
+        section.
     </div>
 </body>
 </html>
