added almost full markup

--- a/index.html
+++ b/index.html
@@ -97,7 +97,73 @@
             </div>
         </section>
 
-        section.
+        <section class="easy">
+            <div class="easy_left">
+                <ul class="easy_list">
+                    <li class="easy_item">
+                        <h3 class="easy_title">Easy to drink</h3>
+                        <p class="easy_text">The perfect anytime drink, sip Haus on its own or with simple mixers you probably already have like soda or tonic.</p>
+                    </li>
+                    <li class="easy_item">
+                        <h3 class="easy_title">Natural ingredients. Nothing fake.</h3>
+                        <p class="easy_text">Artificial ingredients and refined sugars are a big culprit in hangovers. Feel good about what’s in your glass that night — and the next day.</p>
+                    </li>
+                    <li class="easy_item">
+                        <h3 class="easy_title">Delivered to your door</h3>
+                        <p class="easy_text">We blend, bottle, and ship our products straight from Sonoma, CA to your doorstep.</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="easy_right">
+                <img src="./images/easy.jpg" alt="" class="easy_image">
+            </div>
+        </section>
+
+        <section class="notes">
+            <ul class="notes_list">
+                <li class="notes_item">
+                    <p class="notes_text">“Haus has found the solution I didn’t really know I was looking for!”</p>
+                    <p class="notes_text">— Susan</p>
+                    <p class="notes_sub_text">verified buyer</p>
+                </li>
+                <li class="notes_item">
+                    <p class="notes_text">“I love the flavor of this apéritif — it’s light and lively, and it’s refreshing with seltzer or tonic.”</p>
+                    <p class="notes_text">— Fiona</p>
+                    <p class="notes_sub_text">verified buyer</p>
+                </li>
+                <li class="notes_item">
+                    <p class="notes_text">“It’s delicious, and unique. I love everything from the packaging, to the flavors.”</p>
+                    <p class="notes_text">— Esteban</p>
+                    <p class="notes_sub_text">verified buyer</p>
+                </li>
+            </ul>
+        </section>
+
+        <section class="producers">
+            <div class="producers_left">
+                <img src="./images/producers.jpg" alt="photo" class="producers_image">
+            </div>
+            <div class="producers_right">
+                <h1 class="producers_title">We do things differently than most producers</h1>
+                <p class="producers_text">Our flavors are derived from real fruits, herbs, and botanicals, not ingredients from a lab. We leave out the artificial ingredients and excess sugar, and tell you what’s inside. It’s a better way to drink.</p>
+                <a href="" class="producers_link">LEARN MORE</a>
+            </div>
+        </section>
+
+        <section class="mood">
+            <div class="mood_block">
+                <h1 class="mood_title">Set the mood</h1>
+                <p class="mood_text">Curated playlists from Woody + Helena, plus some of our friends and favorite brands.</p>
+                <button class="mood_btn">Spotify</button>
+            </div>
+
+            <div class="mood_bottom_block">
+                <p class="mood_sub_text">Follow us, share us, drink Ha(us)</p>
+                <a href="" class="mood_link">instagram</a>
+                <a href="" class="mood_link">twwiter</a>
+                <a href="" class="mood_link"></a>
+            </div>
+        </section>
     </div>
 </body>
 </html>
