added full markup

--- a/index.html
+++ b/index.html
@@ -161,9 +161,64 @@
                 <p class="mood_sub_text">Follow us, share us, drink Ha(us)</p>
                 <a href="" class="mood_link">instagram</a>
                 <a href="" class="mood_link">twwiter</a>
-                <a href="" class="mood_link"></a>
+                <a href="" class="mood_link">facebook</a>
             </div>
         </section>
+
+        <footer class="footer">
+            <div class="stay_footer_block">
+                <h1 class="stay_title">Stay posted</h1>
+                <p class="stay_text">Let's be friends. Subscribe to our newsletter to receive updates on new launches, recipes, playlists, and more.</p>
+                <div class="footer_email_block">
+                    <input type="email" class="email" placeholder="YOUR EMAIL ADDRESS"><button class="email_btn">Submit</button>
+                </div>
+            </div>
+
+            <div class="explore_block">
+                <h3 class="explore_title">Explore</h3>
+                <ul class="explore_list">
+                    <li class="explore_item"><a href="" class="explore_link">Home</a></li>
+                    <li class="explore_item"><a href="" class="explore_link">Shop</a></li>
+                    <li class="explore_item"><a href="" class="explore_link">Membership</a></li>
+                    <li class="explore_item"><a href="" class="explore_link">Our Story</a></li>
+                    <li class="explore_item"><a href="" class="explore_link">FAQ</a></li>
+                    <li class="explore_item"><a href="" class="explore_link">Refer a Friend</a></li>
+                    <li class="explore_item"><a href="" class="explore_link">Corporate Gifting</a></li>
+                    <li class="explore_item"><a href="" class="explore_link">Gift Card</a></li>
+                </ul>
+            </div>
+
+            <div class="follow_block">
+                <h3 class="follow_title">follow</h3>
+                <ul class="follow_list">
+                    <li class="follow_item"><a href="" class="follow_link">Instagram</a></li>
+                    <li class="follow_item"><a href="" class="follow_link">Spotify</a></li>
+                    <li class="follow_item"><a href="" class="follow_link">Twitter</a></li>
+                    <li class="follow_item"><a href="" class="follow_link">Facebook</a></li>
+                </ul>
+            </div>
+
+            <div class="drop_block">
+                <h3 class="drop_title">Drop Us a Line</h3>
+                <ul class="drop_list">
+                    <li class="drop_item"><a href="" class="drop_link">hello@drink.haus</a></li>
+                    <li class="drop_item"><a href="" class="drop_link">press@drink.haus</a></li>
+                    <li class="drop_item"><a href="" class="drop_link">partnerships@drink.haus</a></li>
+                    <li class="drop_item"><a href="" class="drop_link">jobs@drink.haus</a></li>
+                    <li class="drop_item"><a href="" class="drop_link">wholesale@drink.haus</a></li>
+                </ul>
+            </div>
+
+            <div class="policy_block">
+                <ul class="policy_list">
+                    <li class="policy_item"><a href="" class="policy_link">© Haus 2021</a></li>
+                    <li class="policy_item"><a href="" class="policy_link">Contact Us</a></li>
+                    <li class="policy_item"><a href="" class="policy_link">Return Policy</a></li>
+                    <li class="policy_item"><a href="" class="policy_link">Privacy Policy</a></li>
+                    <li class="policy_item"><a href="" class="policy_link">Terms & Conditions</a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
