added some changes into css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
 
             <div class="header_logo">
-                <img src="./images/Vector.svg" alt="logo" class="logo_image">
+                <svg class="icon icon-Vector"><use xlink:href="#icon-Vector"></use></svg>
             </div>
 
             <div class="header_block">
@@ -211,7 +211,7 @@
 
             <div class="policy_block">
                 <ul class="policy_list">
-                    <li class="policy_item"><a href="" class="policy_link">© Haus 2021</a></li>
+                    <li class="policy_item"><a href="" class="policy_link">&#169 Haus 2021</a></li>
                     <li class="policy_item"><a href="" class="policy_link">Contact Us</a></li>
                     <li class="policy_item"><a href="" class="policy_link">Return Policy</a></li>
                     <li class="policy_item"><a href="" class="policy_link">Privacy Policy</a></li>
