now web-side looks like more realistic

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
 
             <div class="header_logo">
-                <svg class="icon icon-Vector"><use xlink:href="#icon-Vector"></use></svg>
+                <svg class="icon icon-Vector"><use xlink:href="symbol-defs.svg#icon-Vector"></use></svg>
             </div>
 
             <div class="header_block">
@@ -122,17 +122,17 @@
         <section class="notes">
             <ul class="notes_list">
                 <li class="notes_item">
-                    <p class="notes_text">“Haus has found the solution I didn’t really know I was looking for!”</p>
-                    <p class="notes_text">— Susan</p>
+                    <p class="notes_upper_text">“Haus has found the solution I didn’t really know I was looking for!”</p>
+                    <p class="notes_text">— Susan   </p>
                     <p class="notes_sub_text">verified buyer</p>
                 </li>
                 <li class="notes_item">
-                    <p class="notes_text">“I love the flavor of this apéritif — it’s light and lively, and it’s refreshing with seltzer or tonic.”</p>
+                    <p class="notes_upper_text">“I love the flavor of this apéritif — it’s light and lively, and it’s refreshing with seltzer or tonic.”</p>
                     <p class="notes_text">— Fiona</p>
                     <p class="notes_sub_text">verified buyer</p>
                 </li>
                 <li class="notes_item">
-                    <p class="notes_text">“It’s delicious, and unique. I love everything from the packaging, to the flavors.”</p>
+                    <p class="notes_upper_text">“It’s delicious, and unique. I love everything from the packaging, to the flavors.”</p>
                     <p class="notes_text">— Esteban</p>
                     <p class="notes_sub_text">verified buyer</p>
                 </li>
@@ -170,7 +170,7 @@
                 <h1 class="stay_title">Stay posted</h1>
                 <p class="stay_text">Let's be friends. Subscribe to our newsletter to receive updates on new launches, recipes, playlists, and more.</p>
                 <div class="footer_email_block">
-                    <input type="email" class="email" placeholder="YOUR EMAIL ADDRESS"><button class="email_btn">Submit</button>
+                    <input type="email" class="email" placeholder="член"><button class="email_btn">Submit</button>
                 </div>
             </div>
 
