plus one section done

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
         </section>
 
         <section class="natural">
+            <div class="natural_upper_block">
             <h1 class="natural_title">Made with natural ingredients, nothing fake</h1>
             <p class="natural_text">Shop All Flavors</p>
+        </div>
             <div class="natural_block">
                 <ul class="natural_list">
                     <li class="natural_item">
