added more section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="natural_upper_block">
             <h1 class="natural_title">Made with natural ingredients, nothing fake</h1>
             <p class="natural_text">Shop All Flavors</p>
-        </div>
+            </div>
             <div class="natural_block">
                 <ul class="natural_list">
                     <li class="natural_item">
@@ -117,7 +117,7 @@
                 </ul>
             </div>
             <div class="easy_right">
-                <img src="./images/easy.jpg" alt="" class="easy_image">
+                <img src="./images/easy.jpg" alt="photo" class="easy_image">
             </div>
         </section>
 
