added almost everything

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                 </div>
             </div>
 
+            <div class="footer_second_block">
             <div class="explore_block">
                 <h3 class="explore_title">Explore</h3>
                 <ul class="explore_list">
@@ -210,6 +211,7 @@
                     <li class="drop_item"><a href="" class="drop_link">wholesale@drink.haus</a></li>
                 </ul>
             </div>
+        </div>
 
             <div class="policy_block">
                 <ul class="policy_list">
